Fix sliders overflow

--- a/src/components/tiles-in-row/artists.scss
+++ b/src/components/tiles-in-row/artists.scss
@@ -70,7 +70,8 @@
 		}
 	}
 	@media (max-width: 570px) {
-		margin: 0 -36px;
+		margin: 0 -32px;
+		margin-bottom: 0;
 		.tile-wrapper {
 			width: calc(100% - 16px - 20px - 16px);
 			flex-basis: 100%;
