--- a/src/components/tiles-in-row/common.scss
+++ b/src/components/tiles-in-row/common.scss
@@ -2,7 +2,10 @@
 	display: flex;
 	align-items: flex-start;
 	justify-content: space-between;
-	margin: 0 -0.9375em;
+	margin: 0 -20px -32px;
+	padding-bottom: 32px;
+	overflow: hidden;
+	max-width: 100vw;
 	.tile-wrapper {
 		padding: 0 15px;
 		text-align: center;
@@ -56,7 +59,8 @@
 		}
 	}
 	.flickity-page-dots {
-		bottom: -32px;
+		/* bottom: -32px; */
+		bottom: 0;
 		.dot {
 			width: 8px;
 			height: 8px;
